# massive_vin_scanner_plugin

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/massivevinscanner/massive_vin_scanner/: MassiveVinScannerPlugin.kt
android/src/test/kotlin/com/massivevinscanner/massive_vin_scanner/: MassiveVinScannerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: massive_vin_scanner.podspec
ios/Classes/: MassiveVinScannerPlugin.swift
ios/ncnn.xcframework/: Info.plist
ios/openmp.xcframework/: Info.plist
lib/: ffi.dart  massive_vin_scanner.dart  massive_vin_scanner_method_channel.dart  massive_vin_scanner_platform_interface.dart
lib/function/: function.dart
linux/: CMakeLists.txt  massive_vin_scanner_plugin.cc  massive_vin_scanner_plugin_private.h
linux/test/: massive_vin_scanner_plugin_test.cc
macos/: massive_vin_scanner.podspec
macos/Classes/: MassiveVinScannerPlugin.swift
test/: massive_vin_scanner_method_channel_test.dart  massive_vin_scanner_test.dart
windows/: CMakeLists.txt  massive_vin_scanner_plugin.cpp  massive_vin_scanner_plugin.h  massive_vin_scanner_plugin_c_api.cpp
windows/test/: massive_vin_scanner_plugin_test.cpp
(+19 files in other folders)
